--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1"
   }
 }
